Addressed Tablet-Size Navbar Issues
Buttons were overlapping or being hidden behind the MLH banner.
Tweaked padding in 1300 to 1600 width.

--- a/src/components/navButton.module.css
+++ b/src/components/navButton.module.css
@@ -41,3 +41,12 @@
     color: #ffffff;
   }
 }
+
+@media screen and (min-width: 700px) {
+
+  @media screen and (max-width: 1600px) {
+    .button {
+      padding: 5px 10px; 
+    }
+  }
+}
